Closed Bug 195555 Opened 23 years ago Closed 23 years ago

NS_InitEmbedding fails to return an error if NS_InitXPCOM2 fails

Categories

(Core Graveyard :: Embedding: APIs, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.5alpha

People

(Reporter: sfraser_bugs, Assigned: adamlock)

References

()

Details

Attachments

(1 file)

NS_InitEmbedding throws away the return value from NS_InitXPCOM2. This is not helpful for embedders.
OS: MacOS X → All
Hardware: Macintosh → All
This is either conrad's, or locke's. I agree, the result should bubble up.
Assignee: dougt → adamlock
Component: Embedding: GRE Core → Embedding: APIs
QA Contact: ashishbhatt → carosendahl
Attached patch PatchSplinter Review
Patch propogates the error code from NS_InitXPCOM2 & NS_ShutdownXPCOM.
Target Milestone: --- → mozilla1.5alpha
Comment on attachment 122875 [details] [diff] [review] Patch Looks OK to me.
Attachment #122875 - Flags: superreview?(dougt)
Attachment #122875 - Flags: review+
Attachment #122875 - Flags: superreview?(dougt) → superreview+
Comment on attachment 122875 [details] [diff] [review] Patch Seeking 1.4 checkin approval for embedding specific and obvious patch to improve error return codes.
Attachment #122875 - Flags: approval1.4?
Comment on attachment 122875 [details] [diff] [review] Patch a=sspitzer for 1.4 final
Attachment #122875 - Flags: approval1.4? → approval1.4+
Fix checked in
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: