Return error codes from NS_InitXPCOM2 & NS_ShutdownXPCOM in the event of failure. b=195555 r=sfraser sr=dougt a=sspitzer